# agenticAI

./: .env.example  README.md  langgraph.json  pyproject.toml  requirements.txt  run.py
agent/: graph.py  state.py
config/: settings.py
tools/: blob_tools.py  llm.py  llm_factory.py
